# 8-puzzle-game

./: README.md  puzzle.out  pyproject.toml
src/: a_star_func.py  app.py  bfs_dfs.py  gameplay_functions.py  read.in  settings.py  tiles.py
src/test_cases/: 01.in  02.in  03.in
