[project]
name = "puzzle"
version = "0.1.0"
description = "Tic-Tac-Toe Project with PyGame; utilization of BFS/DFS/A-Star algorithms to solve the puzzle"
authors = [{ name = "Kurt Punzalan", email = "kurtbriandaine.1225@gmail.com" }]
dependencies = ["pygame>=2.6.1"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle"]

[tool.rye.scripts]
start = "python src/app.py"
